--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     #messages { list-style-type: none; margin: 0; padding: 0; }
     #messages li { padding: 5px 10px; }
     #messages li:nth-child(odd) { background: #eee; }
-</style
+</style>
 </head>
 <body>
 	<script src="jquery-3.3.1.min.js"></script>
